--- a/CustomTattooDesign_MobileApp/package.json
+++ b/CustomTattooDesign_MobileApp/package.json
@@ -21,7 +21,11 @@
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "arraybuffer-to-string": "^1.0.2",
+    "fast-sha256": "^1.3.0",
+    "js-sha256": "^0.9.0",
     "rxjs": "~6.6.0",
+    "string-to-arraybuffer": "^1.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
